# cargo-rigtest

./: AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  cog.toml  renovate.json
.github/workflows/: build-binaries.yml  ci.yml  commit-check.yml  dco.yml  release.yml
cargo-rig/: Cargo.toml
cargo-rigtest/: Cargo.toml  README.md
cargo-rigtest/src/: junit.rs  main.rs
docs/adr/: 0001-preflight-profile-parameter.md  0002-process-isolated-execution.md  0003-compile-time-registration-via-linkme.md  0004-retry-matcher-subprocess-side.md
examples/basic/: Cargo.toml
examples/basic/tests/: acceptance.rs
examples/calculator/: Cargo.toml
examples/calculator/tests/: rig_tests.rs
examples/http-client/: Cargo.toml
examples/http-client/tests/: acceptance.rs
examples/ssh-client/: Cargo.toml
examples/ssh-client/tests/: acceptance.rs
rig-macros/: Cargo.toml
rig-runtime/: Cargo.toml
rigtest/: Cargo.toml  README.md
rigtest-macros/: Cargo.toml  README.md
rigtest-macros/src/: lib.rs
rigtest-runtime/: Cargo.toml
rigtest-runtime/src/: context.rs  lib.rs  registry.rs  reporter.rs  scheduler.rs
rigtest/src/: context.rs  junit.rs  lib.rs  orchestrator.rs  preflight.rs  preflight_runner.rs  protocol.rs  registry.rs  reporter.rs  retry.rs  runner.rs  scheduler.rs  subprocess.rs
rigtest/tests/: parametrize.rs  preflight.rs  retry_on_error.rs
