[workspace]
members = ["cargo-rigtest", "rigtest-macros", "rigtest-runtime", "examples/basic", "examples/calculator"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Anthony Oteri <anthony.oteri@agiletv.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthonyoteri/cargo-rigtest"
rust-version = "1.87"

[workspace.dependencies]
libc = "0.2"
tokio = { version = "1", features = ["full"] }
linkme = "0.3"
clap = { version = "4", features = ["derive"] }
rand = "0.10"
rand_chacha = "0.10"
futures = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json"] }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console = "0.15"
