[workspace]
members = ["cargo-rigtest", "rigtest-macros", "rigtest", "examples/basic", "examples/calculator", "examples/http-client", "examples/ssh-client"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
authors = ["Anthony Oteri <anthony.oteri@agiletv.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthonyoteri/cargo-rigtest"
homepage = "https://github.com/anthonyoteri/cargo-rigtest"
rust-version = "1.87"

[workspace.dependencies]
rigtest-macros = { version = "0.3", path = "rigtest-macros" }
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "process", "time", "io-util", "macros"] }
linkme = "0.3"
clap = { version = "4", features = ["derive"] }
rand = "0.10"
rand_chacha = "0.10"
futures = "0.3"
indicatif = "0.18"
reqwest = { version = "0.13", features = ["json"] }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console = "0.16"
openssh = "0.10"
quick-junit = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
gethostname = "1"
