[package]
name = "cargo-rigtest"
description = "Cargo plugin for running infrastructure and acceptance tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["testing", "cargo", "integration-testing", "acceptance-testing", "subprocess"]
categories = ["development-tools::testing", "command-line-utilities"]
exclude = ["/.github", "/examples"]

[[bin]]
name = "cargo-rigtest"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-junit = { workspace = true }

[dev-dependencies]
tempfile = "3"
