[package]
name = "rigtest-macros"
description = "Procedural macros for the cargo-rigtest test framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["testing", "cargo", "macros", "integration-testing", "proc-macro"]
categories = ["development-tools::testing"]
exclude = ["/.github", "/examples"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
