[package]
name = "rigtest"
description = "Runtime library for the cargo-rigtest test framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../README.md"
keywords = ["testing", "cargo", "integration-testing", "acceptance-testing", "subprocess"]
categories = ["development-tools::testing", "asynchronous"]
exclude = ["/.github", "/examples"]

[dependencies]
rigtest-macros = { workspace = true }
tokio = { workspace = true }
linkme = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true, optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
console = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[features]
http-client = ["reqwest"]
