[package]
name = "rigtest-example-basic"
version = "0.4.0"
edition = "2021"
publish = false

[dev-dependencies]
rigtest = { path = "../../rigtest", features = ["http-client"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

[[test]]
name = "acceptance"
harness = false
