[package]
name = "rigtest-example-http-client"
version = "0.4.0"
edition = "2021"
publish = false

[dev-dependencies]
rigtest = { path = "../../rigtest", features = ["http-client"] }
reqwest = { workspace = true }
serde = { version = "1", features = ["derive"] }

[[test]]
name = "acceptance"
harness = false
